Continuing hacking away. Fixed navbar state on mobile.

--- a/css/tylorMin.css
+++ b/css/tylorMin.css
@@ -24,7 +24,7 @@ p {
 }
 
 .logo {
-	font-size: 50px;	
+	font-size: 100px;	
 	font-weight: 300;
 	font-family: 'Kreon', serif;
 	letter-spacing: -0.05em;
@@ -91,7 +91,6 @@ nav .tab {
 	width: 700px;
 	position: absolute;
 	font-size: 20px;
-	font-weight: 700;
 	text-align: center;
 	bottom: 0px;
 	left: 0px;
